--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,19 +2,20 @@
 	<main>
 		<article>
 			<h1 class="title">{{ .Title }}</h1>
-			{{ if or .Date }}
-			<time datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">{{ .Date.Format "Jan 02 2006 3:04pm" }}</time>
+			{{ with .Date }}
+			<time datetime="{{ .Format "2006-01-02T15:04:05" }}">{{ .Format "Jan 02 2006 3:04pm" }}</time>
 			{{ end }}
 			{{ .Content }}
 
 			{{ with .Params.tags }}
-			<div>
+			<section class="taglist">
+				<label for="tags">Tags:</label>
 				<ul id="tags">
 					{{ range . }}
 					<li><a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></li>
 					{{ end }}
 				</ul>
-			</div>
+			</section>
 			{{ end }}
 		</article>
 	</main>
