--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header>
 	<h1><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
 	{{ with .Site.Params.description }}
-	<span>{{ .Site.Params.description }}</span>
+	<span>{{ . }}</span>
 	{{ end }}
 	{{ with .Site.Menus.main }}
 	<nav>
