--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,17 +44,27 @@ h1, h2 {
   font-size: 1.5rem;
 }
 
+h1 a:link, h1 a:visited {
+  text-decoration: none;
+  color: unset;
+}
+
+h2, h3, h4, .summary-title {
+  color: var(--accent1);
+}
+
+hr {
+  background-color: var(--navlink);
+  height: 2px;
+  border: none;
+}
+
 a:link {
   color: var(--link);
 }
 
 a:visited {
   color: var(--visited);
-}
-
-h1 a:link, h1 a:visited {
-  text-decoration: none;
-  color: unset;
 }
 
 nav a:link, nav a:visited {
@@ -71,9 +81,6 @@ nav li {
   margin-right: 1rem;
 }
 
-.title {
-  color: var(--accent1);
-}
 
 .pagination, .copyright, .taglist, .date {
   font-size: .8rem;
