--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
 	<main>
 		<article>
-			<h1 class="title">{{ .Title }}</h1>
-			{{ with .Date }}
-			<time datetime="{{ .Format "2006-01-02T15:04:05" }}">{{ .Format "Jan 02 2006 3:04pm" }}</time>
-			{{ end }}
+			<h1>{{ .Title }}</h1>
+			{{ partial "date.html" . }}
+			<hr />
+			
 			{{ .Content }}
 
 			{{ with .Params.tags }}
