--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,4 +1,4 @@
-	<h1><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
+	<h1 class="summary-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
 	{{ partial "date.html" . }}
 	{{ partial "tags.html" . }}
 	<p>
