move style to partial

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,6 +10,6 @@
 			<li class="summary">{{ .Render "summary" }}</li>
 			{{ end }}
 		</ul>
-		{{ partial "pagination.html" . }}
+		{{ partial "pagination" . }}
 	</main>
 {{ end }}
